--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Average Ratings</title>
 </head>
 <body>
+   <script src="js/ratings.js"></script>
   <div>
     <header class="row">
       <h1>
